[package]
name = "slicer"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.15.3"
unrar = "0.5.8"
image = "0.24.7"
tempfile = "3.8.1"
which = "4.4.0"

[dev-dependencies]

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
